--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First GitHub Website</title>
+    <meta charset="UTF-8">
+    <title>Mister Travel Wala</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World 👋</h1>
-  <p>This website is hosted for FREE on GitHub Pages.</p>
+
+<!-- Navbar -->
+<header>
+    <div class="logo">Mister Travel Wala</div>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#destinations">Destinations</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<!-- Hero Section -->
+<section class="hero" id="home">
+    <h1>Explore the World with Mister Travel Wala</h1>
+    <p>Your trusted partner for unforgettable journeys</p>
+    <button>Explore Now</button>
+</section>
+
+<!-- Destinations -->
+<section class="section" id="destinations">
+    <h2>Popular Destinations</h2>
+    <div class="cards">
+        <div class="card">
+            <h3>Goa</h3>
+            <p>Beaches, nightlife & fun</p>
+        </div>
+        <div class="card">
+            <h3>Manali</h3>
+            <p>Snow, mountains & peace</p>
+        </div>
+        <div class="card">
+            <h3>Dubai</h3>
+            <p>Luxury & iconic views</p>
+        </div>
+    </div>
+</section>
+
+<!-- Services -->
+<section class="section services" id="services">
+    <h2>Our Services</h2>
+    <ul>
+        <li>✈️ Flight Booking</li>
+        <li>🏨 Hotel Reservation</li>
+        <li>🚕 Cab & Transport</li>
+        <li>📍 Custom Tour Packages</li>
+    </ul>
+</section>
+
+<!-- Contact -->
+<section class="section contact" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: contact@mistertravelwala.com</p>
+    <p>Phone: +91 98765 43210</p>
+</section>
+
+<!-- Footer -->
+<footer>
+    <p>© 2026 Mister Travel Wala. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
