--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <section class="section contact" id="contact">
     <h2>Contact Us</h2>
     <p>Email: contact@mistertravelwala.com</p>
-    <p>Phone: +91 98765 43210</p>
+    <p>Phone: +91 1234567890</p>
 </section>
 
 <!-- Footer -->
