--- a/index.html
+++ b/index.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Mister Travel Wala</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Mister Travel Wala</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <!-- Navbar -->
-<header>
-    <div class="logo">Mister Travel Wala</div>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#destinations">Destinations</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-    </nav>
+<header class="navbar">
+  <div class="logo">🌍 Mister Travel Wala</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#destinations">Destinations</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
-<!-- Hero Section -->
+<!-- Hero -->
 <section class="hero" id="home">
-    <h1>Explore the World with Mister Travel Wala</h1>
-    <p>Your trusted partner for unforgettable journeys</p>
-    <button>Explore Now</button>
+  <div class="hero-content">
+    <h1>Travel Beyond Boundaries</h1>
+    <p>Premium journeys crafted just for you</p>
+    <button>Start Your Journey</button>
+  </div>
 </section>
 
 <!-- Destinations -->
 <section class="section" id="destinations">
-    <h2>Popular Destinations</h2>
-    <div class="cards">
-        <div class="card">
-            <h3>Goa</h3>
-            <p>Beaches, nightlife & fun</p>
-        </div>
-        <div class="card">
-            <h3>Manali</h3>
-            <p>Snow, mountains & peace</p>
-        </div>
-        <div class="card">
-            <h3>Dubai</h3>
-            <p>Luxury & iconic views</p>
-        </div>
+  <h2 class="reveal">Top Destinations</h2>
+  <div class="cards">
+    <div class="card reveal">
+      <h3>Goa</h3>
+      <p>Sun • Beach • Vibes</p>
     </div>
+    <div class="card reveal">
+      <h3>Manali</h3>
+      <p>Snow • Mountains • Peace</p>
+    </div>
+    <div class="card reveal">
+      <h3>Dubai</h3>
+      <p>Luxury • Skyline • Desert</p>
+    </div>
+  </div>
 </section>
 
 <!-- Services -->
-<section class="section services" id="services">
-    <h2>Our Services</h2>
-    <ul>
-        <li>✈️ Flight Booking</li>
-        <li>🏨 Hotel Reservation</li>
-        <li>🚕 Cab & Transport</li>
-        <li>📍 Custom Tour Packages</li>
-    </ul>
+<section class="section services">
+  <h2 class="reveal">What We Offer</h2>
+  <div class="service-box reveal">✈️ Flights & Visa</div>
+  <div class="service-box reveal">🏨 Hotels & Resorts</div>
+  <div class="service-box reveal">🚕 Local Transport</div>
+  <div class="service-box reveal">📍 Customized Packages</div>
 </section>
 
 <!-- Contact -->
 <section class="section contact" id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: contact@mistertravelwala.com</p>
-    <p>Phone: +91 1234567890</p>
+  <h2 class="reveal">Let’s Plan Your Trip</h2>
+  <p class="reveal">📧 contact@mistertravelwala.com</p>
+  <p class="reveal">📞 +91 1234567890</p>
 </section>
 
-<!-- Footer -->
 <footer>
-    <p>© 2026 Mister Travel Wala. All Rights Reserved.</p>
+  © 2026 Mister Travel Wala • Travel With Style
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
